tests/reference/run-complex_27-4f2a3b3.stderr
style suggestion: Use complex(8) instead of complex*16
 --> tests/../integration_tests/complex_27.f:4:7
  |
4 |       complex*16         zero, one, z
  |       ^^^^^^^^^^ help: write this as 'complex(8)'

syntax error: Newline is unexpected here
 --> tests/../integration_tests/complex_27.f:5:54
  |
5 |       parameter          ( zero = ( 0.0E+0, 0.0E+0 ),
  |                                                      ^ 
